--- a/frontend/src/common/template/custom.css
+++ b/frontend/src/common/template/custom.css
@@ -33,3 +33,8 @@ input[type=checkbox], input[type=radio] {
     padding-top: 25px;
     background-color: #ffffff;
 }
+
+.navbar-nav > .user-menu > .dropdown-menu > .user-footer {
+    background-color: #e0e0e0;
+    padding: 10px;
+}
